# SMP_Sim

./: .gitignore  CMakeLists.txt  README.md  main  main.cpp
include/: camera.h  shader.h
